--- a/puro.plist
+++ b/puro.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://35.229.158.82:8002/ipa/download</string>
+                    <string>https://github.com/yueguan666/test/raw/master/jqyl.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
