--- a/puro.plist
+++ b/puro.plist
@@ -17,7 +17,7 @@
             <key>metadata</key>
             <dict>
                 <key>bundle-identifier</key>
-                <string>com.www.puro</string>
+                <string>S34A69GA4D</string>
                 <key>bundle-version</key>
                 <string>1.0.0</string>
                 <key>kind</key>
